# CP_works

./: .gitignore  LICENSE  README.md  during_class.ipynb  pyproject.toml  ruff.toml
CP_Rubin/Chapter1/: 3Dshapes.ipynb  3Dshapes.py  EasyMatPlot.ipynb  EasyVisual.ipynb  FourierMatplot.ipynb  GradesMatPlot.ipynb  MatPlot2figs.ipynb  PondMatPlot.ipynb
CP_Rubin/Chapter2/: AreaFormatted.ipynb  Directives.ipynb  FileCatchThrow.ipynb  Limits.ipynb
CP_Rubin/Chapter3/: Bessel.ipynb
CP_Rubin/Chapter4/: Walk.ipynb
CP_Rubin/Chapter5/: autograd.ipynb
CP_Rubin/Chapter6/: NewtonNDanimate.ipynb
CP_Rubin/Chapter7/: Bisection.ipynb  NewtonCD.ipynb
Chapter1/: 3Dshapes.ipynb  EasyMatPlot.ipynb  FourierMatplot.ipynb  GradesMatPlot.ipynb  MatPlot2figs.ipynb  PondMatPlot.ipynb  Scatter3dPlot.ipynb  Simple3Dplot.ipynb
Chapter1/EqHeatAnimateMatPlot/: EqHeatAnimateMatPlot.ipynb
Chapter2/: AreaFormatted.ipynb  Limits.ipynb
Chapter3/: Bessel.ipynb
Chapter4/: Decay.ipynb  Walk.ipynb
Chapter5/: PondMatPlot.ipynb  TrapMethods.ipynb
Chapter7/: Bisection.ipynb
Chapter8/: ABM.ipynb
homework/homework10/: Barnsley_fern.ipynb  Mandelbrot_Set.ipynb  dragon_curve.ipynb  homework10_zm.ipynb
homework/homework11/: homework11.md  homework11_zm.ipynb
homework/homework2/: homework2.md  homework2_zm.ipynb  subplots.ipynb
homework/homework3/: homework3_zm.ipynb  第三次作业_2020302191422_祝茗.md
homework/homework4/: homework4_zm.ipynb  第四次作业_2020302191422_祝茗.md
homework/homework5/: homework5.md  (+3 more)
lectures/: HEP.ipynb  MD-IBM-MC.ipynb  TIs.ipynb
postgraduate/: class.ipynb
(+104 files in other folders)
