[project]
name = "cp-works"
version = "0.1.0"
description = "easy to run computational physics works"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autograd>=1.8.0",
    "imageio>=2.37.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]
